--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "express": "^4.16.3",
+    "fontawesome": "^4.7.2",
     "handlebars": "^4.0.11",
     "jquery": "^3.3.1",
     "mongoose": "^4.13.15"
